[metadata]
name = blackjack-simulator
version = 0.0.1
author = Luke Currie
author_email = lukecjcurrie@gmail.com
description = A package for playing/simulating blackjack
url = https://github.com/galadiriancoding/blackjack_simulator

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src