[metadata]
name = blackjack-simulator
version = 0.0.1
author = Luke Currie
author_email = lukecjcurrie@gmail.com
description = A package for playing/simulating blackjack
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GENERAL PUBLIC LICENSE v3
platform = OS Independent
url = https://github.com/galadiriancoding/blackjack_simulator

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src